--- a/djmypypi2/templates/djmypypi2/package-detail.html
+++ b/djmypypi2/templates/djmypypi2/package-detail.html
@@ -8,7 +8,7 @@
     <ul>
         {% for version in object.versions.all  %}
         <li>
-            {{version.archive_name}}
+            <a href="{% url 'djmypypi2:download-package' version.archive_name %}">{{version.archive_name}}</a>
         </li>
         {% endfor %}
     </ul>
